fix: removed overflow on site

--- a/src/index.css
+++ b/src/index.css
@@ -311,6 +311,7 @@ h1 span {
   gap: 15px;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
+  overflow: hidden;
 }
 
 
